fix: Update scrollbar width

--- a/src/App.scss
+++ b/src/App.scss
@@ -15,7 +15,7 @@ body {
 
 /* Custom scrollbar */
 ::-webkit-scrollbar {
-  width: 3px;
+  width: 2px;
 }
 
 ::-webkit-scrollbar-thumb {
